--- a/myapp/templates/watch_video.html
+++ b/myapp/templates/watch_video.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/index.css' %}" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -15,15 +16,15 @@
     />
 
     <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
 
     <title>Document</title>
   </head>
   <body>
     <header class="header">
-      <a href="#">
+      <a href="/">
         <img src="{% static 'imgs/logo.png' %}" class="youtube-logo" alt="" />
       </a>
       <form class="search-bar">
@@ -58,59 +59,73 @@
     </header>
 
     <div class="container d-flex justify-content-center">
-        <div id="player"></div>
+      <div id="player"></div>
     </div>
 
-    <div class="container">
-        <h1>comentarios</h1>
-    </div>
+    <div class="row comments">
+      <div class="container d-flex r- justify-content-end ">
+        <button class="btn btn-outline-primary">Like</button>
+        <button class="btn btn-outline-primary">Dislike</button>
+      </div>
 
-    {% if user.is_authenticated %}
-      puedes comentar y dar likes
-    {% endif%}
+      <form action="#" method="POST" class="">
+          <textarea class="form-control" id="comment_text_area" name="content"></textarea>
+          <button class="btn btn-outline-primary  m-2">comment</button>
+      </form>
+
+      <div class="entry">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt expedita
+        non dolorem minus numquam beatae, ut quaerat consequatur dignissimos ex
+        dolore maxime optio asperiores laboriosam doloremque quia nihil
+        reiciendis! Hic?
+      </div>
+
+
+
+
+    </div>
 
     <script>
-        // 2. This code loads the IFrame Player API code asynchronously.
-        var tag = document.createElement('script');
-  
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-  
-        // 3. This function creates an <iframe> (and YouTube player)
-        //    after the API code downloads.
-        var player;
-        function onYouTubeIframeAPIReady() {
-          player = new YT.Player('player', {
-            height: '360',
-            width: '640',
-            videoId: '{{video_id}}',
-            events: {
-              'onReady': onPlayerReady,
-              'onStateChange': onPlayerStateChange
-            }
-          });
-        }
-  
-        // 4. The API will call this function when the video player is ready.
-        function onPlayerReady(event) {
-          event.target.playVideo();
-        }
-  
-        // 5. The API calls this function when the player's state changes.
-        //    The function indicates that when playing a video (state=1),
-        //    the player should play for six seconds and then stop.
-        var done = false;
-        function onPlayerStateChange(event) {
-          if (event.data == YT.PlayerState.PLAYING && !done) {
-            setTimeout(stopVideo, 6000);
-            done = true;
-          }
-        }
-        function stopVideo() {
-          player.stopVideo();
-        }
-    </script>
+      // 2. This code loads the IFrame Player API code asynchronously.
+      var tag = document.createElement("script");
 
+      tag.src = "https://www.youtube.com/iframe_api";
+      var firstScriptTag = document.getElementsByTagName("script")[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+      // 3. This function creates an <iframe> (and YouTube player)
+      //    after the API code downloads.
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player("player", {
+          height: "360",
+          width: "640",
+          videoId: "{{video_id}}",
+          events: {
+            onReady: onPlayerReady,
+            onStateChange: onPlayerStateChange,
+          },
+        });
+      }
+
+      // 4. The API will call this function when the video player is ready.
+      function onPlayerReady(event) {
+        event.target.playVideo();
+      }
+
+      // 5. The API calls this function when the player's state changes.
+      //    The function indicates that when playing a video (state=1),
+      //    the player should play for six seconds and then stop.
+      var done = false;
+      function onPlayerStateChange(event) {
+        if (event.data == YT.PlayerState.PLAYING && !done) {
+          setTimeout(stopVideo, 6000);
+          done = true;
+        }
+      }
+      function stopVideo() {
+        player.stopVideo();
+      }
+    </script>
   </body>
 </html>
