--- a/myapp/static/css/header.css
+++ b/myapp/static/css/header.css
@@ -23,6 +23,9 @@ body {
 .video-container {
   display: flex;
   flex-direction: column;
+  border: 1px solid grey;
+
+  margin-bottom: 30px;
 }
 
 .thumbnail {
@@ -48,6 +51,7 @@ body {
   min-width: 250px;
   min-height: 150px;
   background-color: #AAA;
+  /* object-fit: contain; */
 }
 
 .video-bottom-section {
@@ -59,13 +63,15 @@ body {
 .channel-icon {
   margin-right: .75rem;
   border-radius: 50%;
-  width: 36px;
-  height: 36px;
+  width: 80px;
+  height: 80px;
+  margin: 5%;
   background-color: #AAA;
 }
 
 .video-details {
   display: flex;
+  margin-left: 8%;
   flex-direction: column;
 }
 
@@ -154,40 +160,80 @@ body {
 
 .header {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   padding: 1rem;
+  height: 10vh;
+  min-height: 120px;
+  border-bottom: 1px solid lightslategray;
 }
 
+
+
+/* .logo{
+  width: 20%;
+  height: auto;
+} */
+
+
 .youtube-logo {
-  height: 20px;
+  width: 300px;
 }
 
 .search-bar {
+
   display: flex;
+  height: 55%;
   flex-grow: 1;
   margin: 0 2rem 0 4rem;
+
+  justify-content: center;
 }
+
+
 
 .search-input {
   width: 100%;
-  font-size: inherit;
+  height: auto;
+  padding: 20px;
+  max-width: 500px;
+  border: transparent;
+  border-top:1px solid #777;
+  border-bottom:1px solid #777;
+  font-size: 30px;
   padding: .4em;
-  border: 1px solid #777;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+
 }
+.search-input:focus{
+  outline:none;
+
+}
+
+.search-border{
+  height: 100%;
+  aspect-ratio: 1/1;
+  width: auto;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border: 1px solid #777;
+  border-right: transparent;
+}
+
 
 .search-btn {
   display: flex;
+  height: 100%;
+  aspect-ratio: 1/1;
+  width: auto;
   align-items: center;
   padding: 0 1.25rem;
   border: 1px solid #777;
   background-color: #F8F8F8;
-  border-left: none;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   cursor: pointer;
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
 }
 
 .search-btn:hover {
@@ -199,11 +245,12 @@ body {
   grid-template-columns: repeat(4, auto);
   align-items: center;
   gap: 1.5rem;
+  padding-right: 2em;
 }
 
 .menu-channel-icon {
   border-radius: 50%;
-  width: 36px;
-  height: 36px;
+  width: 50px;
+  height: 50px;
   background-color: #AAA;
 }
