--- a/myapp/templates/layouts/base.html
+++ b/myapp/templates/layouts/base.html
@@ -6,13 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{% static 'css/header.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
         {% block head %}
         {% endblock %}
     </head>
 
     <body>
         <header class="header">
-            <a href="#" class="logo">
+            <a href="/" class="logo">
                 <img src="{% static 'imgs/logo.png' %}" alt="YouTube Logo" class="youtube-logo" />
             </a>
             <form class="search-bar">
